--- a/.aigne/doc-smith/history.yaml
+++ b/.aigne/doc-smith/history.yaml
@@ -1,4 +1,7 @@
 entries:
+  - timestamp: 2025-11-25T11:43:10.618Z
+    operation: structure_update
+    feedback: Add a Troubleshooting section under Configuration.
   - timestamp: 2025-11-21T10:22:23.464Z
     operation: document_update
     feedback: add 'Related Guides' at the end to reference to the 'Remove a Document' and the 'Update
