fix: add experimental agentic structure generator

--- a/aigne.yaml
+++ b/aigne.yaml
@@ -9,6 +9,8 @@ model:
     $get: reasoningEffort
   temperature: 0.8
 agents:
+  - ./_exp_/index.yaml
+
   # Initialization
   - ./agents/init/index.mjs
 
