--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "@aigne/cli": "^1.56.0",
     "@aigne/core": "^1.69.0",
     "@aigne/publish-docs": "^0.14.1",
+    "@aigne/secrets": "^0.1.1-beta.3",
     "@blocklet/payment-broker-client": "^1.22.24",
     "@terrastruct/d2": "^0.1.33",
     "chalk": "^5.5.0",
