--- a/agents/update/index.yaml
+++ b/agents/update/index.yaml
@@ -25,6 +25,7 @@ skills:
   - ../utils/format-document-structure.mjs
   - ../utils/ensure-document-icons.mjs
   - ../media/load-media-description.mjs
+  - ../utils/analyze-feedback-intent.mjs
   - ../update/check-update-is-single.mjs
   - ../update/save-and-translate-document.mjs
   - url: ../utils/action-success.mjs
